v2.16.0/_sources/plugins/meraki_action_batch_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.meraki.meraki_action_batch_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.meraki.meraki_action_batch module -- Manage Action Batch jobs within the Meraki Dashboard.
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.meraki collection <https://galaxy.ansible.com/cisco/meraki>`_ (version 2.16.0).

    To install it, use: :code:`ansible-galaxy collection install cisco.meraki`.

    To use it in a playbook, specify: :code:`cisco.meraki.meraki_action_batch`.

.. version_added


.. contents::
   :local:
   :depth: 1

.. Deprecated

DEPRECATED
----------
:Removed in: version 3.0.0
:Why: Updated modules released with increased functionality
:Alternative: 

Synopsis
--------

.. Description

- Allows for management of Action Batch jobs for Meraki.


.. Aliases


.. Requirements






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-auth_key"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__parameter-auth_key:

      .. rst-class:: ansible-option-title

      **auth_key**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-auth_key" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Authentication key provided by the dashboard. Required if environmental variable \ :literal:`MERAKI\_KEY`\  is not set.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-body"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__parameter-body:

      .. rst-class:: ansible-option-title

      **body**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-body" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`any`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Required body of action.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-host"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__parameter-host:

      .. rst-class:: ansible-option-title

      **host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Hostname for Meraki dashboard.

      Can be used to access regional Meraki environments, such as China.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"api.meraki.com"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-internal_error_retry_time"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__parameter-internal_error_retry_time:

      .. rst-class:: ansible-option-title

      **internal_error_retry_time**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-internal_error_retry_time" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Number of seconds to retry if server returns an internal server error.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`60`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-operation"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__parameter-operation:

      .. rst-class:: ansible-option-title

      **operation**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-operation" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Operation type of action


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`"create"`
      - :ansible-option-choices-entry:`"destroy"`
      - :ansible-option-choices-entry:`"update"`
      - :ansible-option-choices-entry:`"claim"`
      - :ansible-option-choices-entry:`"bind"`
      - :ansible-option-choices-entry:`"split"`
      - :ansible-option-choices-entry:`"unbind"`
      - :ansible-option-choices-entry:`"combine"`
      - :ansible-option-choices-entry:`"update\_order"`
      - :ansible-option-choices-entry:`"cycle"`
      - :ansible-option-choices-entry:`"swap"`
      - :ansible-option-choices-entry:`"assignSeats"`
      - :ansible-option-choices-entry:`"move"`
      - :ansible-option-choices-entry:`"moveSeats"`
      - :ansible-option-choices-entry:`"renewSeats"`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-org_id"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__parameter-org_id:

      .. rst-class:: ansible-option-title

      **org_id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-org_id" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      ID of organization.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-org_name"></div>
        <div class="ansibleOptionAnchor" id="parameter-organization"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__parameter-org_name:
      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__parameter-organization:

      .. rst-class:: ansible-option-title

      **org_name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-org_name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: organization`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Name of organization.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-output_format"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__parameter-output_format:

      .. rst-class:: ansible-option-title

      **output_format**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-output_format" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Instructs module whether response keys should be snake case (ex. \ :literal:`net\_id`\ ) or camel case (ex. \ :literal:`netId`\ ).


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`"snakecase"` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`"camelcase"`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-output_level"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__parameter-output_level:

      .. rst-class:: ansible-option-title

      **output_level**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-output_level" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Set amount of debug output during module execution.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`"debug"`
      - :ansible-option-choices-entry-default:`"normal"` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-rate_limit_retry_time"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__parameter-rate_limit_retry_time:

      .. rst-class:: ansible-option-title

      **rate_limit_retry_time**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-rate_limit_retry_time" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Number of seconds to retry if rate limiter is triggered.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`165`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-resource"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__parameter-resource:

      .. rst-class:: ansible-option-title

      **resource**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-resource" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Path to Action Batch resource.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-timeout"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__parameter-timeout:

      .. rst-class:: ansible-option-title

      **timeout**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-timeout" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Time to timeout for HTTP requests.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`30`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-use_https"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__parameter-use_https:

      .. rst-class:: ansible-option-title

      **use_https**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-use_https" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      If \ :literal:`no`\ , it will use HTTP. Otherwise it will use HTTPS.

      Only useful for internal Meraki developers.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-use_proxy"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__parameter-use_proxy:

      .. rst-class:: ansible-option-title

      **use_proxy**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-use_proxy" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      If \ :literal:`no`\ , it will not use a proxy, even if one is defined in an environment variable on the target hosts.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_certs"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__parameter-validate_certs:

      .. rst-class:: ansible-option-title

      **validate_certs**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_certs" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Whether to validate HTTP certificates.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - This module is in active development and the interface may change.
   - More information about the Meraki API can be found at \ https://dashboard.meraki.com/api_docs\ .
   - Some of the options are likely only used for developers within Meraki.
   - As of Ansible 2.9, Meraki modules output keys as snake case. To use camel case, set the \ :literal:`ANSIBLE\_MERAKI\_FORMAT`\  environment variable to \ :literal:`camelcase`\ .
   - Ansible's Meraki modules will stop supporting camel case output in Ansible 2.13. Please update your playbooks.
   - Check Mode downloads the current configuration from the dashboard, then compares changes against this download. Check Mode will report changed if there are differences in the configurations, but does not submit changes to the API for validation of change.

.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
      - name: Query all Action Batches
        meraki_action_batch:
          auth_key: abc123
          org_name: YourOrg
          state: query
        delegate_to: localhost

      - name: Query one Action Batch job
        meraki_action_batch:
          auth_key: abc123
          org_name: YourOrg
          state: query
          action_batch_id: 12345
        delegate_to: localhost

      - name: Create an Action Batch job
        meraki_action_batch:
          auth_key: abc123
          org_name: YourOrg
          state: present
          actions:
          - resource: '/organizations/org_123/networks'
            operation: 'create'
            body:
              name: 'AnsibleActionBatch1'
              productTypes:
                - 'switch'
        delegate_to: localhost

      - name: Update Action Batch job
        meraki_action_batch:
          auth_key: abc123
          org_name: YourOrg
          state: present
          action_batch_id: 12345
          synchronous: false

      - name: Create an Action Batch job with multiple actions
        meraki_action_batch:
          auth_key: abc123
          org_name: YourOrg
          state: present
          actions:
          - resource: '/organizations/org_123/networks'
            operation: 'create'
            body:
              name: 'AnsibleActionBatch2'
              productTypes:
                - 'switch'
          - resource: '/organizations/org_123/networks'
            operation: 'create'
            body:
              name: 'AnsibleActionBatch3'
              productTypes:
                - 'switch'
        delegate_to: localhost

      - name: Delete an Action Batch job
        meraki_action_batch:
          auth_key: abc123
          org_name: YourOrg
          state: absent
          action_batch_id: 12345
        delegate_to: localhost




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-data"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__return-data:

      .. rst-class:: ansible-option-title

      **data**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-data" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`complex`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Information about action batch jobs.


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always


      .. raw:: html

        </div>

    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-data/actions"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__return-data/actions:

      .. rst-class:: ansible-option-title

      **actions**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-data/actions" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      List of actions associated to job.


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` success


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-data/confirmed"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__return-data/confirmed:

      .. rst-class:: ansible-option-title

      **confirmed**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-data/confirmed" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Whether action batch job was confirmed for execution.


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` success


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-data/id"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__return-data/id:

      .. rst-class:: ansible-option-title

      **id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-data/id" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Unique ID of action batch job.


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` success

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`"123"`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-data/organization_id"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__return-data/organization_id:

      .. rst-class:: ansible-option-title

      **organization_id**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-data/organization_id" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Unique ID of organization which owns batch job.


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` success

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`"2930418"`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-data/status"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__return-data/status:

      .. rst-class:: ansible-option-title

      **status**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-data/status" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`complex`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Information about the action batch job state.


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` success


      .. raw:: html

        </div>

    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-data/status/completed"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__return-data/status/completed:

      .. rst-class:: ansible-option-title

      **completed**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-data/status/completed" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Whether job has completed.


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` success


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-data/status/created_resources"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__return-data/status/created_resources:

      .. rst-class:: ansible-option-title

      **created_resources**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-data/status/created_resources" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      List of resources created during execution.


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` success

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`[{"id": 100, "uri": "/networks/L\_XXXXX/groupPolicies/100"}]`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-data/status/errors"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__return-data/status/errors:

      .. rst-class:: ansible-option-title

      **errors**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-data/status/errors" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      List of errors, if any, created during execution.


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` success


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-data/status/failed"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__return-data/status/failed:

      .. rst-class:: ansible-option-title

      **failed**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-data/status/failed" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Whether execution of action batch job failed.


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` success


      .. raw:: html

        </div>



  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-data/synchronous"></div>

      .. _ansible_collections.cisco.meraki.meraki_action_batch_module__return-data/synchronous:

      .. rst-class:: ansible-option-title

      **synchronous**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-data/synchronous" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Whether action batch job executes synchronously or asynchronously.


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` success


      .. raw:: html

        </div>




..  Status (Presently only deprecated)

Status
------

.. Deprecated note

- This module will be removed in version 3.0.0.
  *[deprecated]*
- For more information see `DEPRECATED`_.


.. Authors

Authors
~~~~~~~

- Kevin Breit (@kbreit)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/meraki/dashboard-api-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/meraki/dashboard-api-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

